--- a/Schedule/Schedule.csproj
+++ b/Schedule/Schedule.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="MongoDB.Driver" Version="2.15.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
+
 </Project>
