Local storage and load image

--- a/BlazorProject/BlazorProject.csproj
+++ b/BlazorProject/BlazorProject.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.LocalStorage" Version="4.2.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.15.1" />
+    <PackageReference Include="MongoDB.Driver.GridFS" Version="2.15.1" />
   </ItemGroup>
 
 </Project>
